--- a/modules/mx-ui/client/scss/mx/components/_table.scss
+++ b/modules/mx-ui/client/scss/mx/components/_table.scss
@@ -82,3 +82,10 @@ table {
     border-top: 1px solid $color-grey-200;
     padding: 4px 12px;
 }
+
+.cards-table {
+    .cards-table-content {
+        overflow-x: auto;
+        min-height: 0.01%;
+    }
+}
